--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_show_posts.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_show_posts.xml
@@ -73,6 +73,19 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
+            android:id="@+id/btnChat"
+            android:layout_width="84dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:padding="@dimen/component_padding"
+            android:scaleType="centerCrop"
+            android:src="@android:drawable/sym_action_chat"
+            app:layout_constraintStart_toEndOf="@+id/btnSortDirection"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
             android:id="@+id/btnLinearLayout"
             android:layout_width="50dp"
             android:layout_height="50dp"
