implementacija tagova na postu

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_add_post.xml
@@ -152,7 +152,7 @@
     <LinearLayout
         android:id="@+id/llTags"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:orientation="horizontal"
@@ -160,15 +160,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"></LinearLayout>
 
-    <AutoCompleteTextView
+    <EditText
         android:id="@+id/acTags"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:hint="Planina,Reka,Park..."
         android:minHeight="48dp"
-        android:hint="Dodaj tag"
+        android:maxLength= "12"
         app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostPost"
+        app:layout_constraintEnd_toStartOf="@+id/btnActivityAddPostAddTag"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnActivityAddPostAddTag"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/rounded_cyan_button"
+        android:backgroundTint="#1C789A"
+        android:text="Dodaj tag"
+        app:layout_constraintBottom_toTopOf="@+id/btnActivityAddPostPost"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/llTags" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
