--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
@@ -231,7 +231,7 @@
             android:layout_marginTop="4dp"
             android:backgroundTint="#FFFFFF"
             android:stateListAnimator="@null"
-            android:text="Recenzije"
+            android:text="Istorija"
             android:textColor="@color/cardview_dark_background"
             app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyPosts"
             app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
