--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
@@ -151,6 +151,7 @@
                 <TextView
                     android:id="@+id/tvFragmentProfileFollowers"
                     android:gravity="center"
+                    android:clickable="true"
                     android:text="PRATIOCI" />
 
                 <TextView
