--- a/Client/BrzoDoLokacije/app/src/main/res/layout/chat_preview.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/chat_preview.xml
@@ -6,7 +6,8 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/ivUserImage"/>
+        android:id="@+id/ivUserImage"
+        android:src="@drawable/ic_nav_profile"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
