--- a/Client/BrzoDoLokacije/app/src/main/res/layout/chat_message_other.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/chat_message_other.xml
@@ -4,23 +4,20 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/rounded_cyan_button"
-    android:clipToOutline="true"
     android:id="@+id/clMessage"
     android:layout_margin="@dimen/text_padding"
-    android:layout_gravity="end">
+    android:clipToOutline="true">
+
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:cardBackgroundColor="@color/cardview_dark_background">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:id="@+id/tvMessage"
-            android:text="blabla"
-            android:padding="@dimen/component_padding"/>
+        app:cardBackgroundColor="@color/dark_blue_transparent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:id="@+id/tvMessage"
+        android:text="blabla"
+        android:padding="@dimen/component_padding"/>
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
