--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_followers.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_followers.xml
@@ -9,18 +9,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
+    <LinearLayout
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/btnFragmentFollowersBack"
+            android:clickable="true"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_baseline_arrow_back_24"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="right"
             android:text="Pratioci"
             android:textSize="20sp"
-            android:textStyle="bold" />
-
+            android:textStyle="bold"
+            />
+    </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvFragmentShowFollowers"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
     </LinearLayout>
 </FrameLayout>
