--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_following.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_following.xml
@@ -9,15 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+<LinearLayout
+    android:layout_width="80dp"
+    android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/btnFragmentFollowingBack"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:clickable="true"
+        android:src="@drawable/ic_baseline_arrow_back_24"
 
-        <TextView
+       />
+    <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="right"
             android:text="Prati"
             android:textSize="20sp"
             android:textStyle="bold" />
-
+    </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvFragmentShowFollowing"
             android:layout_width="match_parent"
