--- a/Client/BrzoDoLokacije/app/src/main/res/xml/backup_rules.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/xml/backup_rules.xml
@@ -8,6 +8,7 @@
 <full-backup-content>
     <!--
    <include domain="sharedpref" path="."/>
-   <exclude domain="sharedpref" path="device.xml"/>
--->
+   -->
+   <exclude domain="database" path="."/>
+
 </full-backup-content>
