--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f6f6f6"
     tools:context=".Fragments.FragmentHomePage">
 
 
@@ -11,13 +12,12 @@
         android:id="@+id/tvFragmentHomePageHelloName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
 
+        android:layout_marginStart="20dp"
         android:layout_marginTop="56dp"
-        android:layout_marginEnd="107dp"
         android:text="Zdravo, Mia"
-        app:layout_constraintEnd_toStartOf="@+id/cvFragmentHomePageProfile"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cvFragmentHomePageProfile"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
@@ -25,11 +25,10 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_gravity="center"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         app:cardCornerRadius="250dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvFragmentHomePageHelloName"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -38,9 +37,10 @@
             android:layout_height="70dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_baseline_person_24"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            tools:layout_editor_absoluteX="9dp"
+            tools:layout_editor_absoluteY="15dp" />
     </androidx.cardview.widget.CardView>
-
 
     <TextView
         android:id="@+id/tvFragmentHomePageSearch"
@@ -49,6 +49,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="Pretraži lokacije"
+        android:visibility="invisible"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,9 +60,10 @@
         android:id="@+id/cvFragmentHomePageSearch"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="15dp"
         android:elevation="0dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,10 +75,10 @@
             android:id="@+id/etFragmentHomePageSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/rounded_white_button_login"
-            android:hint="  Pretraga"
-            android:paddingLeft="15dp"
-            android:inputType="textPersonName" />
+            android:backgroundTint="@color/white"
+            android:hint="  Pretraži lokacije"
+            android:inputType="textPersonName"
+            android:paddingLeft="15dp" />
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="49dp"
@@ -104,8 +106,6 @@
         android:id="@+id/flFragmentHomePageMainContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,4 +113,6 @@
         app:layout_constraintTop_toBottomOf="@+id/btnFragmentHomePageBack">
 
     </FrameLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
