--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
@@ -2,46 +2,109 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
-    android:layout_height="180dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/ivPIHPBackground"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:scaleType="fitXY"
+        android:id="@+id/imageView9"
+        android:layout_width="170dp"
+        android:layout_height="240dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="4dp"
+        android:elevation="3dp"
+        android:src="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/Circular"
-        app:srcCompat="@drawable/b1" />
+        app:shapeAppearanceOverlay="@style/Circular" />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/ivPIHPMenu"
+        android:id="@+id/ivPIHPBackground"
         android:layout_width="0dp"
-        android:layout_height="22dp"
-        app:layout_constraintBottom_toBottomOf="@+id/ivPIHPBackground"
-
-        app:layout_constraintEnd_toEndOf="@+id/ivPIHPBackground"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/ivPIHPBackground"
-        app:shapeAppearanceOverlay="@style/roundedBottom"
-        app:srcCompat="@color/dark_blue_transparent" />
+        android:layout_height="180dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="12dp"
+        android:elevation="3dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+        app:layout_constraintEnd_toEndOf="@+id/imageView9"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.04"
+        app:shapeAppearanceOverlay="@style/Circular"
+        app:srcCompat="@drawable/b1" />
 
     <TextView
         android:id="@+id/tvPIHPLocationName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:elevation="3dp"
         android:text="TextView"
-        android:textColor="@color/white"
-        android:textSize="10dp"
-        app:layout_constraintStart_toStartOf="@+id/ivPIHPMenu"
-        app:layout_constraintTop_toTopOf="@+id/ivPIHPMenu" />
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivPIHPBackground" />
+
+    <TextView
+        android:id="@+id/tvPIHPRecension"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+
+        android:layout_marginEnd="8dp"
+        android:elevation="3dp"
+        android:text="TextView"
+        android:textSize="11dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/ivPIHPBackground" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginTop="8dp"
+        android:elevation="3dp"
+        app:layout_constraintEnd_toStartOf="@+id/tvPIHPRecension"
+        app:layout_constraintTop_toBottomOf="@+id/ivPIHPBackground"
+        app:srcCompat="@drawable/ic_baseline_star_rate_24" />
+
+    <ImageView
+        android:id="@+id/imageView11"
+
+        android:layout_width="20dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="2dp"
+        android:elevation="3dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvPIHPLocationName"
+        app:srcCompat="@drawable/ic_baseline_location_on_24" />
+
+    <TextView
+        android:id="@+id/tvPIHPLocationDetail"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="2dp"
+        android:elevation="3dp"
+        android:text="TextView"
+        android:textSize="11dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView9"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView11"
+        app:layout_constraintTop_toBottomOf="@+id/tvPIHPLocationName" />
+    " />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
