--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
@@ -9,34 +9,32 @@
         android:id="@+id/imageView9"
         android:layout_width="170dp"
         android:layout_height="240dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginStart="7dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="10dp"
         android:elevation="3dp"
         android:src="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/Circular" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivPIHPBackground"
-        android:layout_width="0dp"
-        android:layout_height="186dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="4dp"
+        android:layout_width="172dp"
+        android:layout_height="185dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
         android:elevation="3dp"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="@+id/imageView9"
-        app:layout_constraintEnd_toEndOf="@+id/imageView9"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045"
-        app:shapeAppearanceOverlay="@style/Circular"
+        app:layout_constraintEnd_toEndOf="@id/imageView9"
+        app:layout_constraintStart_toStartOf="@id/imageView9"
+        app:layout_constraintTop_toTopOf="@id/imageView9"
+        app:layout_constraintVertical_bias="0.0"
+        app:shapeAppearanceOverlay="@style/roundedTop"
         app:srcCompat="@drawable/b1" />
 
     <TextView
@@ -95,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="4dp"
         android:elevation="3dp"
         android:text="TextView"
         android:textSize="11dp"
