--- a/Client/BrzoDoLokacije/app/src/main/res/values/colors.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="unfollow">#c4c4c4</color>
     <color name="dark_blue_transparent">#DE093A4C</color>
+    <color name="button_main">#183e4b</color>
 </resources>
