--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
@@ -7,6 +7,18 @@
     android:background="#f6f6f6"
     tools:context=".Fragments.FragmentHomePage">
 
+    <TextView
+        android:id="@+id/brzodolokacije"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="BrzoDoLokacije"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <!--
 
     <TextView
         android:id="@+id/tvFragmentHomePageHelloName"
@@ -19,29 +31,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cvFragmentHomePageProfile"
         app:layout_constraintTop_toTopOf="parent" />
-
+  -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cvFragmentHomePageProfile"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         app:cardCornerRadius="250dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/ivFragmentHomePageProfile"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_baseline_person_24"
             tools:ignore="ContentDescription"
             tools:layout_editor_absoluteX="9dp"
             tools:layout_editor_absoluteY="15dp" />
     </androidx.cardview.widget.CardView>
-
+<!--
     <TextView
         android:id="@+id/tvFragmentHomePageSearch"
         android:layout_width="wrap_content"
@@ -55,20 +67,19 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cvFragmentHomePageProfile" />
-
+  -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cvFragmentHomePageSearch"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="15dp"
         android:elevation="0dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvFragmentHomePageSearch">
+        app:layout_constraintTop_toBottomOf="@+id/brzodolokacije">
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -97,6 +108,7 @@
         android:id="@+id/btnFragmentHomePageBack"
         android:layout_width="63dp"
         android:layout_height="40dp"
+        android:layout_marginTop="8dp"
         android:clickable="true"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,6 +125,16 @@
         app:layout_constraintTop_toBottomOf="@+id/btnFragmentHomePageBack">
 
     </FrameLayout>
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/ic_round_chat_24"
+        app:layout_constraintEnd_toStartOf="@+id/cvFragmentHomePageProfile"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
