--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page_main_scroll.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page_main_scroll.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.FragmentHomePageMainScroll">
 
 <LinearLayout
@@ -13,41 +14,42 @@
 
     <androidx.cardview.widget.CardView
         android:backgroundTint="#f6f6f6"
-android:layout_marginTop="16dp"
-        android:id="@+id/cvFragmentHomePageText1"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="16dp"
+app:cardElevation="0dp"
+        android:id="@+id/cvFragmentHomePageText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        >
+        android:stateListAnimator="@null"
+        android:elevation="0dp"
+        android:layout_marginTop="16dp">
 
         <TextView
-            android:id="@+id/tvFragmentHomePagePopular"
+            android:id="@+id/tvFragmentHomePageNewest"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:text="Popularno"
+            android:text="Najnovije"
+            android:clickable="true"
             android:textStyle="bold" />
 
+
         <TextView
-            android:id="@+id/tvFragmentHomePagePopularShowAll"
+            android:id="@+id/tvFragmentHomePageNewestShowAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:clickable="true"
-            android:text="Prikaži sve"
-
-            tools:ignore="TouchTargetSizeCheck" />
-
+            android:text="Prikaži sve" />
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:id="@+id/rvFragmentHomePagePopular"
+        android:id="@+id/rvFragmentHomePageNewest"
+        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="wrap_content" />
 
     <HorizontalScrollView
         android:layout_marginStart="16dp"
@@ -151,55 +153,47 @@ android:layout_marginTop="16dp"
     android:id="@+id/ll1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
     <androidx.cardview.widget.CardView
         android:backgroundTint="#f6f6f6"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="16dp"
-
-        android:id="@+id/cvFragmentHomePageText2"
+        android:layout_marginTop="16dp"
+        android:id="@+id/cvFragmentHomePageText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stateListAnimator="@null"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:elevation="0dp"
-        android:layout_marginTop="16dp">
+        app:cardElevation="0dp"
+        >
 
         <TextView
-            android:id="@+id/tvFragmentHomePageNewest"
+            android:id="@+id/tvFragmentHomePagePopular"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:drawableBottom="@drawable/ic_baseline_circle_7"
-            android:text="Najnovije"
-            android:clickable="true"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/tvFragmentHomePageBestRated"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:text="Najposećenije"
-            android:layout_marginStart="80dp"
-            android:drawableBottom="@drawable/ic_baseline_circle_7"
-
+            android:text="Popularno"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvFragmentHomePageNewestShowAll"
+            android:id="@+id/tvFragmentHomePagePopularShowAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:clickable="true"
-            android:text="Prikaži sve" />
+            android:text="Prikaži sve"
+
+            tools:ignore="TouchTargetSizeCheck" />
+
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFragmentHomePagePopular"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:id="@+id/rvFragmentHomePageNewest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_marginBottom="16dp" />
+
+    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll2"
 
@@ -208,7 +202,7 @@ android:layout_marginTop="16dp"
        android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
         android:backgroundTint="#f6f6f6"
-
+app:cardElevation="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:id="@+id/cvFragmentHomePageText3"
@@ -216,7 +210,13 @@ android:layout_marginTop="16dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp">
 
-
+        <TextView
+            android:id="@+id/tvFragmentHomePageBestRated"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="Najbolje ocenjeno"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvFragmentHomePageBestRatedShowAll"
