--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_preview.xml
@@ -2,36 +2,51 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="0dp"
-    android:background="@drawable/rounded_picture_background"
-    android:clipToOutline="true"
 >
 
 
-    <ImageView
+    <!--    <TextView
+        android:id="@+id/tvLocationType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tip lokacije"
+        android:textColor="@color/unfollow"
+        tools:layout_editor_absoluteX="146dp"
+        tools:layout_editor_absoluteY="295dp" />-->
+
+    <com.google.android.material.imageview.ShapeableImageView
+        app:shapeAppearanceOverlay="@style/roundedTop"
         android:id="@+id/locationImage"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:outlineProvider="background"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/b1"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/vBanner"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@color/dark_blue_transparent"
-        android:outlineProvider="background"
-        app:layout_constraintBottom_toBottomOf="@+id/locationImage"
-        tools:layout_editor_absoluteX="10dp">
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/view_bottom_corner_radius"
+        android:backgroundTint="#FFFFFF"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locationImage"
+        app:layout_constraintVertical_bias="0.0">
 
 
     </View>
@@ -40,41 +55,41 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="8dp"
+        android:elevation="10dp"
         android:gravity="top|left"
         android:text="Naslov"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.076"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/vBanner"
-        app:layout_constraintVertical_bias="0.18" />
+        app:layout_constraintTop_toBottomOf="@+id/locationImage" />
 
     <TextView
-        android:id="@+id/tvLocationType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tip lokacije"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/vBanner"
-        app:layout_constraintEnd_toStartOf="@+id/tvLocationParent"
-        app:layout_constraintHorizontal_bias="0.112"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/vBanner"
-        app:layout_constraintVertical_bias="0.721" />
-
-    <TextView
+        android:elevation="10dp"
         android:id="@+id/tvLocationParent"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="4dp"
+        android:drawableLeft="@drawable/ic_baseline_location_on_24"
+
         android:text="grad, drzava"
         android:textAlignment="viewEnd"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.952"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/vBanner"
-        app:layout_constraintVertical_bias="0.737" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
+    <TextView
+        android:id="@+id/tvPostPreviewRating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="32dp"
+        android:drawableLeft="@drawable/ic_baseline_star_rate_24"
+        android:elevation="10dp"
+        android:text="TextView"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locationImage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
