--- a/Client/BrzoDoLokacije/app/src/main/res/layout/single_post_history.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/single_post_history.xml
@@ -5,28 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="0dp"
-    android:background="@drawable/rounded_picture_background"
-    android:clipToOutline="true"
     >
-
-
 
 
     <View
         android:id="@+id/vBannerSinglePostHistory"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/dark_blue_transparent"
-        android:outlineProvider="background"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/view_corner_radius"
+        android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="10dp"
-        android:layout_marginTop="5dp"
-        >
+        app:layout_constraintVertical_bias="0.0">
 
 
     </View>
@@ -35,25 +32,29 @@
         android:id="@+id/tvTitleSinglePostHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:elevation="5dp"
         android:gravity="top|left"
         android:text="Naslov"
-        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.076"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/vBannerSinglePostHistory"
-        app:layout_constraintVertical_bias="0.18" />
+        app:layout_constraintVertical_bias="0.246" />
 
     <TextView
         android:id="@+id/tvLocationTypeSinglePostHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:elevation="5dp"
         android:text="Tip lokacije"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/vBannerSinglePostHistory"
         app:layout_constraintEnd_toStartOf="@+id/tvLocationParentSinglePostHistory"
-        app:layout_constraintHorizontal_bias="0.112"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/vBannerSinglePostHistory"
         app:layout_constraintVertical_bias="0.721" />
@@ -62,14 +63,16 @@
         android:id="@+id/tvLocationParentSinglePostHistory"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginEnd="32dp"
+        android:elevation="5dp"
         android:text="22.11.2022"
+
         android:textAlignment="viewEnd"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.952"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/vBannerSinglePostHistory"
-        app:layout_constraintVertical_bias="0.737" />
+        app:layout_constraintVertical_bias="0.792" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
