--- a/Client/BrzoDoLokacije/app/src/main/res/layout/chat_preview.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/chat_preview.xml
@@ -1,19 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
+    android:padding="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="5dp"
+        android:id="@+id/readIndicator"
+        android:layout_height="5dp"
+        android:layout_gravity="center_vertical"/>
+    <ImageView
         android:id="@+id/ivUserImage"
-        android:src="@drawable/ic_nav_profile"/>
-    <TextView
+        android:layout_width="70dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_nav_profile"
+        android:padding="5dp"
+        android:scaleType="centerCrop"/>
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/tvUsername"
-        android:textSize="@dimen/header1_size"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@id/ivUserImage"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvUsername"
+                android:layout_weight="1"
+                android:textSize="@dimen/header1_size"
+                android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvLastMessageDate"
+                android:text="1/1/1"
+                android:textSize="@dimen/header2_size"
+                android:textColor="@color/unfollow"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvLastMessage"
+                android:text="hej, sta ima novo?"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textAlignment="gravity"
+                android:textSize="@dimen/header2_size"
+                android:textColor="@color/unfollow"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.appcompat.widget.LinearLayoutCompat>
