Omogucena pretraga lokacija i objava  na pocetnoj strani. Prilikom potvrde pretrage omoguceno usmeravanje na stranicu sve objave sa datim parametrima pretrage i vrsenje pretrage. Dodat onResume.

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
@@ -82,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/brzodolokacije">
 
 
-        <com.google.android.material.textfield.TextInputEditText
+        <AutoCompleteTextView
             android:id="@+id/etFragmentHomePageSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -92,6 +92,7 @@
             android:paddingLeft="15dp" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/mbFragmentHomePageSearchButton"
             android:layout_width="49dp"
             android:layout_height="match_parent"
             android:layout_gravity="right"
