--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
@@ -14,8 +14,8 @@
         <ImageView
 
             android:id="@+id/imageView3"
-            android:layout_width="match_parent"
-            android:layout_height="290dp"
+            android:layout_width="416dp"
+            android:layout_height="190dp"
             android:foreground="@drawable/b3"
             android:foregroundGravity="center_vertical|center|center_horizontal|fill"
             android:src="@drawable/b3"
@@ -26,8 +26,8 @@
         <ImageView
 
             android:id="@+id/imageView4"
-            android:layout_width="411dp"
-            android:layout_height="287dp"
+            android:layout_width="413dp"
+            android:layout_height="175dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="@id/imageView3"
             app:layout_constraintHorizontal_bias="0.0"
@@ -41,7 +41,7 @@
             android:layout_width="0dp"
             android:layout_height="199dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="156dp"
+            android:layout_marginTop="90dp"
             android:layout_marginEnd="20dp"
             android:adjustViewBounds="true"
             android:background="#E8FFFFFF"
@@ -56,10 +56,9 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvFragmentHomePageProfile"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"
-            android:layout_marginTop="24dp"
             android:elevation="10dp"
             app:cardCornerRadius="250dp"
             app:layout_constraintBottom_toTopOf="@+id/tableLayout"
@@ -67,14 +66,14 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.887">
+            app:layout_constraintVertical_bias="0.65999997">
 
             <ImageView
 
                 android:id="@+id/tvFragmentProfileProfilePicture"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
-                android:elevation="10dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:elevation="20dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_baseline_person_24"
                 tools:ignore="ContentDescription" />
@@ -99,7 +98,7 @@
 
         <TableLayout
             android:id="@+id/tableLayout"
-            android:layout_width="323dp"
+            android:layout_width="0dp"
             android:layout_height="120dp"
             android:elevation="20dp"
             android:gravity="center"
@@ -107,16 +106,19 @@
             app:layout_constraintBottom_toBottomOf="@+id/tvFragmentProfileInfoContainer"
             app:layout_constraintEnd_toEndOf="@+id/tvFragmentProfileInfoContainer"
             app:layout_constraintHorizontal_bias="0.488"
-            app:layout_constraintStart_toStartOf="@+id/tvFragmentProfileInfoContainer">
+            app:layout_constraintStart_toStartOf="@+id/tvFragmentProfileInfoContainer"
+            app:layout_constraintTop_toTopOf="@+id/tvFragmentProfileInfoContainer"
+            app:layout_constraintVertical_bias="0.97">
 
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-
                 android:gravity="center">
 
                 <TextView
                     android:id="@+id/tvFragmentProfileName"
+                    style="@style/title"
+                    android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="Petar Petrović" />
@@ -133,119 +135,173 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="#PetarP" />
+                    android:textSize="17sp"
+                    android:text="PetarP" />
             </TableRow>
 
-            <Space android:layout_height="20dp"></Space>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
+
+                <Button
+                    android:layout_height="15dp"
+                    android:background="@drawable/rounded_transparent_button"
+                    android:clickable="false"
+                    android:visibility="invisible" />
+            </TableRow>
+
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center">
-
+                android:gravity="center"
+                android:weightSum="1">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:weightSum="3"
+                >
                 <TextView
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:id="@+id/tvFragmentProfilePosts"
+                    android:width="100dp"
                     android:gravity="center"
                     android:text="OBJAVE" />
 
                 <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="110dp"
+                    android:layout_weight="1"
                     android:id="@+id/tvFragmentProfileFollowers"
-                    android:gravity="center"
+                    android:width="100dp"
                     android:clickable="true"
+                    android:gravity="center"
                     android:text="PRATIOCI" />
 
                 <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="110dp"
+                    android:layout_weight="1"
                     android:id="@+id/tvFragmentProfileFollow"
+                    android:width="100dp"
                     android:gravity="center"
                     android:text="PRAĆENJA" />
+</LinearLayout>
             </TableRow>
 
             <TableRow
+                android:weightSum="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
 
+                <LinearLayout>
                 <TextView
                     android:id="@+id/tvFragmentProfilePostsNo"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="156" />
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:text="156"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:layout_weight="1"
                     android:id="@+id/tvFragmentProfileFollowersNo"
                     android:gravity="center"
-                    android:text="50" />
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:text="50"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:layout_weight="1"
                     android:id="@+id/tvFragmentProfileFollowNo"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="40" />
+                    android:text="40"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+                </LinearLayout>
             </TableRow>
         </TableLayout>
 
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="409dp"
-            android:layout_height="40dp"
+        <LinearLayout
+            android:id="@+id/buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnFragmentProfileShowMyPosts" />
+            app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer">
 
-        <Button
-            android:id="@+id/btnFragmentProfileShowMyPosts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="4dp"
-            android:backgroundTint="#FFFFFF"
-            android:stateListAnimator="@null"
-            android:text="Objave"
+            <Button
+                android:id="@+id/btnFragmentProfileShowMyPosts"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#FFFFFF"
+                android:stateListAnimator="@null"
+                android:text="Objave"
+                android:textColor="@color/cardview_dark_background"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
 
-            android:textColor="@color/cardview_dark_background"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
+            <Button
+                android:id="@+id/btnFragmentProfileShowMyData"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#FFFFFF"
+                android:stateListAnimator="@null"
 
-        <Button
-            android:id="@+id/btnFragmentProfileShowMyData"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="20dp"
-            android:backgroundTint="#FFFFFF"
-            android:stateListAnimator="@null"
-            android:text="Podaci"
+                android:text="Nalog"
+                android:textColor="@color/cardview_dark_background"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyRecensions"
+                app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
 
-            android:textColor="@color/cardview_dark_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyRecensions"
-            app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
-
-        <Button
-            android:id="@+id/btnFragmentProfileShowMyRecensions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="4dp"
-            android:backgroundTint="#FFFFFF"
-            android:stateListAnimator="@null"
-            android:text="Istorija"
-            android:textColor="@color/cardview_dark_background"
-            app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyPosts"
-            app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
+            <Button
+                android:id="@+id/btnFragmentProfileShowMyRecensions"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_weight="1"
+                android:backgroundTint="#FFFFFF"
+                android:stateListAnimator="@null"
+                android:text="Istorija"
+                android:textColor="@color/cardview_dark_background"
+                app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyPosts"
+                app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
+        </LinearLayout>
 
         <FrameLayout
             android:id="@+id/flFragmentProfileFragmentContainer"
-            android:layout_width="409dp"
-            android:layout_height="319dp"
-            android:layout_marginTop="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/divider">
-        </FrameLayout>
+            app:layout_constraintTop_toBottomOf="@+id/divider6"></FrameLayout>
+
+        <View
+            android:id="@+id/divider6"
+            android:layout_width="409dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="4dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttons" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
